; ModuleID = '/home/carl/AnghaBench/openssl/ssl/extr_ssl_lib.c_dane_ctx_final.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/extr_ssl_lib.c_dane_ctx_final.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dane_ctx_st = type { i64, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dane_ctx_st*)* @dane_ctx_final to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dane_ctx_final(%struct.dane_ctx_st* %0) #0 {
  %2 = alloca %struct.dane_ctx_st*, align 8
  store %struct.dane_ctx_st* %0, %struct.dane_ctx_st** %2, align 8
  %3 = load %struct.dane_ctx_st*, %struct.dane_ctx_st** %2, align 8
  %4 = getelementptr inbounds %struct.dane_ctx_st, %struct.dane_ctx_st* %3, i32 0, i32 2
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @OPENSSL_free(i32* %5)
  %7 = load %struct.dane_ctx_st*, %struct.dane_ctx_st** %2, align 8
  %8 = getelementptr inbounds %struct.dane_ctx_st, %struct.dane_ctx_st* %7, i32 0, i32 2
  store i32* null, i32** %8, align 8
  %9 = load %struct.dane_ctx_st*, %struct.dane_ctx_st** %2, align 8
  %10 = getelementptr inbounds %struct.dane_ctx_st, %struct.dane_ctx_st* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = call i32 @OPENSSL_free(i32* %11)
  %13 = load %struct.dane_ctx_st*, %struct.dane_ctx_st** %2, align 8
  %14 = getelementptr inbounds %struct.dane_ctx_st, %struct.dane_ctx_st* %13, i32 0, i32 1
  store i32* null, i32** %14, align 8
  %15 = load %struct.dane_ctx_st*, %struct.dane_ctx_st** %2, align 8
  %16 = getelementptr inbounds %struct.dane_ctx_st, %struct.dane_ctx_st* %15, i32 0, i32 0
  store i64 0, i64* %16, align 8
  ret void
}

declare dso_local i32 @OPENSSL_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
